# aegis-alpha-lab

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Aegis_Alpha_Lab_Proposal.docx  Aegis_Alpha_Lab_Proposal_v2.docx  Aegis_Alpha_Lab_Proposal_v3.docx  LICENSE  Makefile  README.md  pyproject.toml  ~$gis_Alpha_Lab_Proposal_v3.docx
.github/workflows/: ci.yml
configs/: costs.yaml  data.yaml  factors.yaml  gates.yaml  portfolio.yaml  risk.yaml  universe.yaml
data/reference/: sp500_membership.csv  sp500_membership.meta.json  ticker_aliases.csv
docker/: Dockerfile  docker-compose.yml
docs/plans/: week1.md  week2.md  week3.md
docs/proposal/: Aegis_Alpha_Lab_12_Week_Plan.docx
docs/reports/: week1.md  week2.md  week3_day15.md  week3_day16.md  week3_day17.md
notebooks/: week1_smoke_test.ipynb
scripts/: build_sp500_groundtruth.py  fetch_polygon_fundamentals.py  fetch_polygon_ticker_reference.py  fetch_sp500_history.py  open_lockbox.py  pull_wrds.py
src/aegis/: __init__.py  cli.py  config.py
src/aegis/backtest/: __init__.py  _common.py  full.py  week1.py
src/aegis/data/: __init__.py  fundamentals.py  index_membership.py  panel.py  polygon_loader.py  schema.py  ticker_reference.py  universe.py
src/aegis/features/: __init__.py  base.py  momentum.py  operators.py  value.py
src/aegis/ledger/: __init__.py  models.py  replay.py  schema.py  store.py
src/aegis/portfolio/: __init__.py
src/aegis/risk/: __init__.py
src/aegis/utils/: __init__.py  dotenv.py  git.py  hashing.py
src/aegis/validation/: __init__.py
tests/: conftest.py
tests/fixtures/: sp500_20180615.txt  sp500_20210104.txt
tests/integration/: test_panel_build.py  test_polygon_fundamentals.py  test_polygon_loader.py
tests/unit/: test_earnings_yield.py  test_features.py  test_full_pipeline.py  test_fundamentals.py  test_gate.py  test_index_membership.py  test_ledger.py  test_momentum.py  test_operators.py  test_optimizer.py  test_panel.py  test_polygon_fundamentals_scraper.py  test_polygon_loader.py  test_risk.py  test_scaffolding.py  test_schema.py  test_ticker_reference.py  test_universe.py  test_week1_pipeline.py
